examples-2/service-clusterip.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-nodeport-clusterip
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
