examples-2/service-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-nodeport-service
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30303
  selector:
    app: nginx
  type: NodePort
